--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #database-config
 spring.datasource.url=jdbc:mariadb://localhost:3306/db_gueszy
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=061245
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #spring-data-jpa-config
